--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="menu">
             <li><a  class="item" href="index.html">Portfolio</a></li>
             <li><a href="">About</a></li>
-            <li><img src="assets/img/Logo.png" alt=""></li>
+            <li><img src="assets/img/logo.png" alt=""></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Get in Touch</a></li>
             </ul>
